--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -12,20 +12,21 @@
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
     <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
 
-    <script id="blogstats-template" type="text/x-handlebars-template">
+    <!-- <script id="blogstats-template" type="text/x-handlebars-template">
       <article class="clearfix" data-stats="{{blogstats}}" data-category="{{category}}">
         <header>s
           <h1>{{titlte}}</title>
           <section class="blogstats-body">{{{body}}}
             <dt><dd class="articles">{{totalArticles}}<dd></dt>
             <dt><dd class="words">{{totalWords}}<dd></dt>
-
-
-
           </section>
         </header>
       </article>
-    </script>
+    </script> -->
+    <script id="blogstats-template" type="text/x-handlebars-template">
+    <p>Author: "{{name}}" Wrote a total of {{numWords}}
+    </p>
+   </script>
   </head>
 
   <body>
@@ -53,7 +54,8 @@
         <h2>Author Stats</h2>
         <p><em>Details on who is writing, and how much writing they are doing...</em></p>
         <ul class="author-stats">
-          <!-- TODO: Use a handlebars template to fill in some stats for each author -->
+          <!-- DONE: Use a handlebars template to fill in some stats for each author -->
+
         </ul>
       </section>
     </main>
@@ -66,7 +68,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      // TODO: After we fetch and load all the articles, what view function do we want to run next?
+      // DONE: After we fetch and load all the articles, what view function do we want to run next?
       // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
       Article.fetchAll(articleView.initAdminPage);
     </script>
